# uprag

./: .nvim.lua  .pre-commit-config.yaml  README.md  docker-compose-dev.yaml
backend/: .gitignore  .pylintrc  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: auth.py  chat.py  knowledge.py  user.py
backend/app/database/: database.py
backend/app/database/repository/: chat_repository.py  document_repository.py  repository.py  user_repository.py
backend/app/model/: chat_model.py  common_model.py  document_model.py  user_model.py
backend/app/schemas/: auth_schema.py  chat_schema.py  common_schema.py  knowledge_schema.py  user_schema.py
backend/app/services/auth/: auth_service.py  utils.py
backend/app/services/chat/: chat_service.py  chat_utils.py
backend/app/services/knowledge/: knowledge_service.py  utils.py
backend/app/services/user/: user_service.py
backend/app/utils/: error_messages.py
backend/app/utils/agent/: agent.py  chatgpt_agent.py
backend/app/utils/document_parser/: document_parser.py  unstructured_parser.py
backend/app/utils/prompt_templates/: contextual_chunking.py  rag_template.py  short_answer.py  vector_db_context_assistant_content.py
backend/app/vector_db/: pinecone.py  vector_db.py
frontend/: .env.development  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatTextBox.tsx  DocumentSelector.tsx  NavBar.tsx  (+3 more)
(+23 files in other folders)
