[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["m4ch374 <spiner47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
pymongo = {extras = ["srv"], version = "^4.11.2"}
python-dotenv = "^1.0.1"
motor = "^3.7.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
